Changes in Text

--- a/index.html
+++ b/index.html
@@ -14,9 +14,20 @@
 		<title>Ayodhya Prakash Ayurveda</title>
 	</head>
 	<body>
-		<h1 class="text-center">Welcome to Ayodhya Prakash Ayurveda</h1>
+		<div class="text-center jsk">|| Jai Shree Krishna ||</div>
+		<h1 class="text-center shlok">Jai Shree Krishna</h1>
+		<div class="row">
+			<div class="col-xs-4"></div>
+			<div class="col-xs-4 rounded"><h2 class="text-center wt">Welcome to </h2></div>
+			<div class="col-xs-4"></div>
+		</div>
+		<h1 class="text-center apa">Ayodhya Prakash Ayurveda</h1>
 		<div class="text-center"><img src="APA_Logo.png" alt="Something went wrong. Logo could not be loaded." class="logo"/></div>
-		<div class="text-center">Other features of the site coming soon.</div>
-		<div class="text-center">Contact on +91-9425074437 for more details.</div>
+		<h3 class="text-center ofscs">Other features of the site coming soon</h3>
+		<div class="row">
+			<div class="col-xs-4"></div>
+			<div class="col-xs-4"><h3 class="text-center con">Contact : +91-9425074437</h3></div>
+			<div class="col-xs-4"></div>
+		</div>
 	</body>
 </html>
