--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="./index.css">
 		<title>Ayodhya Prakash Ayurveda</title>
 	</head>
 	<body>
